--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Add this to your index.html or a similar file where you include global scripts and styles -->
+    <link rel="stylesheet" href ="https://cdn.jsdelivr.net/npm/givemefive-thebelab@0.6.0/src/index.css">
+
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -29,6 +33,15 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://cdn.jsdelivr.net/npm/givemefive-thebelab@0.6.0/lib/index.min.js"></script>
+    <script type="text/x-thebe-config">
+      {
+        binderOptions: {
+          repo: "minrk/ligo-binder",
+          ref: "master",
+        }
+      }
+      </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
